--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 bottle==0.12.13
+bottle-sqlalchemy==0.4.3
 certifi==2017.11.5
 chardet==3.0.4
+gunicorn==19.7.1
 idna==2.6
 pexpect==4.3.0
+psycopg2==2.7.3.2
 ptyprocess==0.5.2
 requests==2.18.4
 scapy-python3==0.22
+SQLAlchemy==1.1.15
 urllib3==1.22
