--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,27 @@ scipy==1.0.0
 six==1.11.0
 SQLAlchemy==1.1.15
 urllib3==1.22
+bottle==0.12.13
+bottle-sqlalchemy==0.4.3
+certifi==2017.11.5
+chardet==3.0.4
+cycler==0.10.0
+gunicorn==19.7.1
+idna==2.6
+matplotlib==2.1.0
+numpy==1.13.3
+olefile==0.44
+pexpect==4.3.0
+Pillow==4.3.0
+psycopg2==2.7.3.2
+ptyprocess==0.5.2
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.3
+requests==2.18.4
+requests-toolbelt==0.8.0
+scapy-python3==0.22
+scipy==1.0.0
+six==1.11.0
+SQLAlchemy==1.1.15
+urllib3==1.22
