--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.4
 bottle==0.12.13
 bottle-sqlalchemy==0.4.3
@@ -6,11 +7,16 @@ certifi==2017.11.5
 cffi==1.11.5
 chardet==3.0.4
 ciscosparkapi==0.10
+colorama==0.3.9
 cryptography==2.2.2
+cursor==1.2.0
 cycler==0.10.0
+enum34==1.1.6
 future==0.16.0
 gunicorn==19.7.1
+halo==0.0.12
 idna==2.6
+log-symbols==0.0.11
 lxml==4.1.1
 matplotlib==2.1.0
 netmiko==2.1.1
@@ -23,6 +29,7 @@ psycopg2==2.7.3.2
 ptyprocess==0.5.2
 pyasn1==0.4.2
 pycparser==2.18
+pyfiglet==0.7.5
 PyNaCl==1.2.1
 pyparsing==2.2.0
 pyserial==3.4
@@ -31,11 +38,14 @@ pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
 requests-toolbelt==0.8.0
+rmate==1.0.3
 scapy-python3==0.22
 scipy==1.0.0
 scp==0.11.0
 six==1.11.0
+spinners==0.0.19
 SQLAlchemy==1.1.15
+termcolor==1.1.0
 textfsm==0.4.1
 urllib3==1.22
 xmljson==0.1.9
