--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==1.2.0
 asn1crypto==0.24.0
 backports.shutil-get-terminal-size==1.0.0
 bcrypt==3.1.4
@@ -7,17 +8,23 @@ certifi==2017.11.5
 cffi==1.11.5
 chardet==3.0.4
 ciscosparkapi==0.10
+click==6.7
 colorama==0.3.9
-cryptography==2.2.2
+cryptography==2.1.4
 cursor==1.2.0
 cycler==0.10.0
 enum34==1.1.6
+Flask==0.12.1
+Flask-Ask==0.9.8
 future==0.16.0
 gunicorn==19.7.1
 halo==0.0.12
 idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
 log-symbols==0.0.11
 lxml==4.1.1
+MarkupSafe==1.0
 matplotlib==2.1.0
 netmiko==2.1.1
 numpy==1.13.3
@@ -31,6 +38,7 @@ pyasn1==0.4.2
 pycparser==2.18
 pyfiglet==0.7.5
 PyNaCl==1.2.1
+pyOpenSSL==17.0.0
 pyparsing==2.2.0
 pyserial==3.4
 python-dateutil==2.6.1
@@ -47,5 +55,7 @@ spinners==0.0.19
 SQLAlchemy==1.1.15
 termcolor==1.1.0
 textfsm==0.4.1
+Unidecode==1.0.22
 urllib3==1.22
+Werkzeug==0.14.1
 xmljson==0.1.9
